feat: add service ct

--- a/kube/service/ct_daemonset.yaml
+++ b/kube/service/ct_daemonset.yaml
@@ -15,19 +15,26 @@ spec:
       - operator: Exists
       serviceAccountName: conntracker
       hostNetwork: true
+      hostPID: true
       containers:
       - name: tracker
         image: fchrgrib/conntracker:latest
         securityContext:
           capabilities:
-            add: ["BPF", "NET_ADMIN", "SYS_ADMIN"]
+            add: ["BPF", "NET_ADMIN", "SYS_ADMIN", "SYS_PTRACE", "SYS_RESOURCE"]
           privileged: true
         env:
-        - name: KUBECONFIG
-          value: "/var/run/secrets/kubernetes.io/serviceaccount/token"
-        # This environment variable could be needed if your app expects it
         - name: USE_INCLUSTER_CONFIG
           value: "true"
+        # Fix the Kubernetes config approach
+        - name: KUBECONFIG
+          value: ""  # Empty value to force in-cluster config
+        # Add debugging
+        - name: DEBUG
+          value: "true"
+        # Increase verbosity if your app supports it
+        - name: LOG_LEVEL
+          value: "debug"
         volumeMounts:
         - name: lib-modules
           mountPath: /lib/modules
@@ -35,10 +42,17 @@ spec:
           mountPath: /sys/fs/bpf
         - name: kernel-headers
           mountPath: /usr/src/linux-headers
+        - name: sys-kernel-debug
+          mountPath: /sys/kernel/debug
+        ports:
+        - containerPort: 8080
+          hostPort: 8080
+          protocol: TCP
       volumes:
       - name: lib-modules
         hostPath:
           path: /lib/modules
+          type: Directory
       - name: bpf-fs
         hostPath:
           path: /sys/fs/bpf
@@ -46,4 +60,8 @@ spec:
       - name: kernel-headers
         hostPath:
           path: /usr/src
+          type: Directory
+      - name: sys-kernel-debug
+        hostPath:
+          path: /sys/kernel/debug
           type: Directory
