--- a/kube/service/ct_rbac.yaml
+++ b/kube/service/ct_rbac.yaml
@@ -2,7 +2,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: conntracker
-
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -10,19 +9,18 @@ metadata:
   name: conntracker
 rules:
 - apiGroups: [""]
-  resources: ["pods", "services"]
+  resources: ["pods"]
   verbs: ["get", "list", "watch"]
-
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: conntracker
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: conntracker
 subjects:
 - kind: ServiceAccount
   name: conntracker
   namespace: default
+roleRef:
+  kind: ClusterRole
+  name: conntracker
+  apiGroup: rbac.authorization.k8s.io
