feat: add service ct

--- a/kube/service/ct_daemonset.yaml
+++ b/kube/service/ct_daemonset.yaml
@@ -16,6 +16,31 @@ spec:
       serviceAccountName: conntracker
       hostNetwork: true
       hostPID: true
+      initContainers:
+      - name: kernel-setup
+        image: ubuntu:22.04
+        command:
+        - "/bin/bash"
+        - "-c"
+        - |
+          echo "Checking kernel configuration..."
+          echo "Kernel version: $(uname -r)"
+          echo "Available headers:"
+          ls -la /usr/src/ || echo "No headers found in /usr/src"
+          echo "BPF filesystem:"
+          mount | grep bpf || echo "No BPF filesystem mounted"
+          echo "Init container complete"
+        securityContext:
+          privileged: true
+        volumeMounts:
+        - name: lib-modules
+          mountPath: /lib/modules
+        - name: bpf-fs
+          mountPath: /sys/fs/bpf
+        - name: kernel-headers
+          mountPath: /usr/src
+        - name: sys-kernel-debug
+          mountPath: /sys/kernel/debug
       containers:
       - name: tracker
         image: fchrgrib/conntracker:latest
@@ -26,15 +51,12 @@ spec:
         env:
         - name: USE_INCLUSTER_CONFIG
           value: "true"
-        # Fix the Kubernetes config approach
         - name: KUBECONFIG
-          value: ""  # Empty value to force in-cluster config
-        # Add debugging
+          value: ""
+        - name: VERBOSE
+          value: "true"
         - name: DEBUG
           value: "true"
-        # Increase verbosity if your app supports it
-        - name: LOG_LEVEL
-          value: "debug"
         volumeMounts:
         - name: lib-modules
           mountPath: /lib/modules
@@ -44,9 +66,23 @@ spec:
           mountPath: /usr/src/linux-headers
         - name: sys-kernel-debug
           mountPath: /sys/kernel/debug
+        - name: var-run
+          mountPath: /var/run
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: 8080
+          initialDelaySeconds: 5
+          periodSeconds: 10
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 8080
+          initialDelaySeconds: 15
+          periodSeconds: 20
         ports:
         - containerPort: 8080
-          hostPort: 8080
+          name: metrics
           protocol: TCP
       volumes:
       - name: lib-modules
@@ -64,4 +100,8 @@ spec:
       - name: sys-kernel-debug
         hostPath:
           path: /sys/kernel/debug
+          type: Directory
+      - name: var-run
+        hostPath:
+          path: /var/run
           type: Directory
