--- a/kube/service/ct_daemonset.yaml
+++ b/kube/service/ct_daemonset.yaml
@@ -43,7 +43,7 @@ spec:
           mountPath: /sys/kernel/debug
       containers:
       - name: tracker
-        image: fchrgrib/conntracker:latest
+        image: fchrgrib/conntracker:latest  # You'll need to update this with your new image
         securityContext:
           capabilities:
             add: ["BPF", "NET_ADMIN", "SYS_ADMIN", "SYS_PTRACE", "SYS_RESOURCE"]
@@ -51,8 +51,10 @@ spec:
         env:
         - name: USE_INCLUSTER_CONFIG
           value: "true"
-        - name: KUBECONFIG
-          value: ""
+        - name: NODE_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.nodeName
         - name: VERBOSE
           value: "true"
         - name: DEBUG
