feat: load bpf maps

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "tracepoint.h": "c",
         "bpf_tracing.h": "c",
-        "bpf_core_read.h": "c"
+        "bpf_core_read.h": "c",
+        "nf_nat.h": "c"
     }
 }
